--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
-        <p>Web Developer | Designer | Creative Thinker</p>
+        <h1>D>Lokeshvaran</h1>
+        <p>student | Creative Thinker</p>
     </header>
 
     <nav>
@@ -104,7 +104,7 @@
         <!-- About Me Section -->
         <section id="about" class="section">
             <h2 class="section-title">About Me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur auctor sapien eu urna volutpat, sit amet laoreet erat pellentesque.</p>
+            <p> I am pursuing BCA in prince shri venketeshwara arts and science college</p>
         </section>
 
         <!-- Projects Section -->
@@ -157,3 +157,4 @@
     </footer>
 </body>
 </html>
+
